components/operator/internal/controllers/stack/testdata/multipod-with-audit-log/results/ingresses-networking.k8s.io-v1/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    generation: 1
    labels:
        stack: "true"
    name: gateway
    namespace: multipod-with-audit-log
spec:
    rules:
        - host: example.net
          http:
            paths:
                - backend:
                    service:
                        name: gateway
                        port:
                            name: http
                  path: /
                  pathType: Prefix
status:
    loadBalancer: {}
